SET (EXCLUDE_SUBDIR "common")

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY_BACK ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})      
        SET(dirlist ${dirlist} ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

SET(CURRENT_DIR "${PROJECT_SOURCE_DIR}/solvers")
SUBDIRLIST(SUBDIRS ${CURRENT_DIR})

FOREACH(subdir ${SUBDIRS})
  SET (DO_INCLUDE "TRUE")
  FOREACH(exclude ${EXCLUDE_SUBDIR})
    IF (${subdir} MATCHES ${exclude})
      UNSET (DO_INCLUDE)
      #message(STATUS " ${exclude} matches ${subdir}")
    ELSE()
      #message(STATUS " ${exclude} DOES NOT match ${subdir}")
    ENDIF()
  ENDFOREACH()

  IF (DEFINED DO_INCLUDE)
    ADD_SUBDIRECTORY(${subdir})    
  ENDIF()
ENDFOREACH()   

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

SET(TARGETS_LIST ${TARGETS_LIST} ${TARGETS_LIST_LOC} PARENT_SCOPE)
SET(NOT_BUILT_TARGETS_LIST ${NOT_BUILT_TARGETS_LIST} ${NOT_BUILT_TARGETS_LIST_LOC} PARENT_SCOPE)
SET(DISABLED_FEATURES_LIST ${DISABLED_FEATURES_LIST} ${DISABLED_FEATURES_LIST_LOC} PARENT_SCOPE)

