set(MAIN_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include/")
set(MAIN_BINARY_NAME "netconv")

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY_BACK ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

SET( NETCONV_SRC
  netconv.cpp 
  NDskel_breakdown.cpp 
  C/mystring.c 
  C/NDskeleton.c 
  C/NDskel_tags.c 
  C/NDskel_VTK_IO.c 
  C/NDnetwork.c 
  C/NDnetwork_tags.c 
  C/NDnet_VTK_IO.c
  C/NDnet_PLY_IO.c 
  C/rply/rply.c
  C/gadget_io.c 
  C/distances.c
  C/asciiSurvey.c
  C/smooth.c 
  C/NDfield.c 
  C/NDfield_VTK_IO.c 
  C/myendian.c 
  sortID.cpp
  C/simplex.c
  )

SET( MAIN_BINARY_SRC
  ${NETCONV_SRC}
  )

add_executable("${MAIN_BINARY_NAME}" ${MAIN_BINARY_SRC})

set(ALL_TARGETS "${MAIN_BINARY_NAME}")

SET(TARGETS_LIST_LOC ${TARGETS_LIST_LOC} ${ALL_TARGETS})

install (TARGETS ${ALL_TARGETS} DESTINATION bin)

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

SET(TARGETS_LIST ${TARGETS_LIST} ${TARGETS_LIST_LOC} PARENT_SCOPE)
SET(NOT_BUILT_TARGETS_LIST ${NOT_BUILT_TARGETS_LIST} ${NOT_BUILT_TARGETS_LIST_LOC} PARENT_SCOPE)
SET(DISABLED_FEATURES_LIST ${DISABLED_FEATURES_LIST} ${DISABLED_FEATURES_LIST_LOC} PARENT_SCOPE)
