set(MAIN_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include/")
set(MAIN_BINARY_NAME "vtrSlicer")

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY_BACK ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

SET( VTRSLICER_SRC
  vtrSlicer.cpp
  )

SET( MAIN_BINARY_SRC
  ${VTRSLICER_SRC}
  )

add_executable("${MAIN_BINARY_NAME}" ${MAIN_BINARY_SRC})

set(ALL_TARGETS "${MAIN_BINARY_NAME}")

SET(TARGETS_LIST_LOC ${TARGETS_LIST_LOC} ${ALL_TARGETS})

install (TARGETS ${ALL_TARGETS} DESTINATION bin)

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

SET(TARGETS_LIST ${TARGETS_LIST} ${TARGETS_LIST_LOC} PARENT_SCOPE)
SET(NOT_BUILT_TARGETS_LIST ${NOT_BUILT_TARGETS_LIST} ${NOT_BUILT_TARGETS_LIST_LOC} PARENT_SCOPE)
SET(DISABLED_FEATURES_LIST ${DISABLED_FEATURES_LIST} ${DISABLED_FEATURES_LIST_LOC} PARENT_SCOPE)
